--- a/css/styles.css
+++ b/css/styles.css
@@ -20,6 +20,7 @@ ul, li {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 10pt;
 	color: #333;
+  margin-top: 0;
 }
 a {
 	color: orange;
@@ -62,6 +63,7 @@ nav {
   height: 80px;
   background-color: #252831;
   text-align:center;
+  margin-top: 0;
 }
 nav h1 {
   margin: auto;
@@ -146,6 +148,9 @@ nav h1 a {
 #restaurant-hours-label {
   display: none;
 }
+.map-aria-description {
+  display: none;
+}
 
 /* ====================== Restaurant Listing ====================== */
 #restaurants-list {
@@ -169,10 +174,8 @@ nav h1 a {
 #restaurants-list .restaurant-img {
   background-color: #ccc;
   display: block;
-  margin: 5px;
- 
-  width: 280px;
-  height: 145px;
+  width: 210px;
+  height: 150px;
   float: right;
 }
 #restaurants-list li h1 {
@@ -335,7 +338,7 @@ nav h1 a {
    #restaurants-list li {
     padding: 15px;
     margin-right: 0;
-    margin-left: 0;
+    margin-left: 0;                                                  
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -350,6 +353,11 @@ nav h1 a {
     font-size: 15pt;
     color: #333;
     line-height: 1.5;
+    }
+
+    #restaurants-list .restaurant-img {
+      width: 300px;
+      height: 24                 0px;
     }
    
    
